@@ -1,3 +1,8 @@
+2006-10-07  Matthias Clasen <mclasen@redhat.com>
+
+	* gconf/gconf-client.c: Fix error handling in the
+	getters.  (#102050, #360224)
+
 ============================= 2.16.0 ======================
 
 2006-08-15  Kjartan Maraas  <kmaraas@gnome.org>
